# merco-api

./: Cargo.toml
api/: Cargo.toml
api/src/: main.rs
common/: Cargo.toml  README.md
common/migrations/: 002_api_keys.sql
common/src/: lib.rs
common/src/database/: connection.rs
common/src/database/migrations/: migration.rs  mod.rs
common/src/models/: mod.rs
common/src/models/auth/: api_key.rs  magic_link.rs  mod.rs  otp.rs  password_reset.rs  role.rs  session.rs  user.rs
common/src/models/project/: project.rs
common/src/models/webhook/: webhook.rs
services/auth/: Cargo.toml
services/auth/src/: config.rs  error.rs  lib.rs
services/auth/src/domain/: mod.rs  role.rs  session.rs  token.rs  user.rs
services/auth/src/dto/: requests.rs  responses.rs
services/auth/src/handlers/: admin.rs  auth.rs  mfa.rs  mod.rs  oauth.rs  password.rs  passwordless.rs  rbac.rs  session.rs  settings.rs  user.rs  webhooks.rs
services/auth/src/middleware/: api_key.rs  auth.rs  mod.rs  project.rs  rate_limit.rs
services/auth/src/repository/: mod.rs  traits.rs
services/auth/src/repository/migrations/: 001_initial_schema.sql
services/auth/src/repository/postgres/: mod.rs  models.rs  role.rs  session.rs  user.rs  user_role.rs
services/auth/src/services/: auth_service.rs  email_service.rs  mfa_service.rs  mod.rs  oauth_service.rs  otp_service.rs  password_service.rs  sms_service.rs  token_service.rs  webhook_service.rs
services/auth/src/utils/: crypto.rs  validation.rs
services/payment/: Cargo.toml
services/payment/src/: lib.rs
