[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39.0", features = ["full"] }
axum = "0.8.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.142"
uuid = "1.16.0"
chrono = "0.4.31"
log = "0.4.25"
tracing = "0.1.44"
env_logger = "0.11.5"
dotenv = "0.15.0"


auth = { path = "../services/auth" }
payment = { path = "../services/payment" }