[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.142"
uuid = "1.16.0"
chrono = "0.4.31"
log = "0.4.25"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres"] }
tracing = "0.1.44"
env_logger = "0.11.5"
dotenv = "0.15.0"
tokio = { version = "1.39.0", features = ["full"] }