[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
tracing = "0.1"
tokio = { version = "1.39", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
jsonwebtoken = "9.3"
argon2 = "0.5"
oauth2 = "4.4"
lettre = "0.11"
totp-rs = { version = "2.0", features = ["qr", "otpauth"] }
validator = { version = "0.18", features = ["derive"] }
base64 = "0.22"
rand = "0.8"
url = "2.5"
sha2 = "0.10"
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"